--- a/museum of animals/index.html
+++ b/museum of animals/index.html
@@ -39,13 +39,13 @@
        <div class="row align-items-center">
            <div class="col-md-6">
                <div id="moa" class="text-center d-none d-md-block">
-                <h1>MUSUEM<span>/</span>OF<span>/</span>ANIMALS</h1>
-                <h1>MUSUEM<span>/</span>OF<span>/</span>ANIMALS</h1>
-                <h1>MUSUEM<span>/</span>OF<span>/</span>ANIMALS</h1>
-                <h1>MUSUEM<span>/</span>OF<span>/</span>ANIMALS</h1>
-                <h1>MUSUEM<span>/</span>OF<span>/</span>ANIMALS</h1>
-                <h1>MUSUEM<span>/</span>OF<span>/</span>ANIMALS</h1>
-                <h1>MUSUEM<span>/</span>OF<span>/</span>ANIMALS</h1>         
+                <h1>MUSEUM<span>/</span>OF<span>/</span>ANIMALS</h1>
+                <h1>MUSEUM<span>/</span>OF<span>/</span>ANIMALS</h1>
+                <h1>MUSEUM<span>/</span>OF<span>/</span>ANIMALS</h1>
+                <h1>MUSEUM<span>/</span>OF<span>/</span>ANIMALS</h1>
+                <h1>MUSEUM<span>/</span>OF<span>/</span>ANIMALS</h1>
+                <h1>MUSEUM<span>/</span>OF<span>/</span>ANIMALS</h1>
+                      
            </div>
            </div>
            <div class="col-md-6">
